<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rfid_ros_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jmhateley123@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_export_assemblies</buildtool_depend>
  <buildtool_depend>dotnet_cmake_module</buildtool_depend>
  <buildtool_depend>rcldotnet_common</buildtool_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>rmw_implementation_cmake</exec_depend>
  <exec_depend>rosidl_generator_c</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>

  <exec_depend>dotnet</exec_depend>
  <exec_depend>rcldotnet</exec_depend>
  <exec_depend>rcl</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rcl_action</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>unique_identifier_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>rcl</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rcl_action</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>unique_identifier_msgs</build_depend>
  <build_depend>rosdil_default_generators</build_depend>
 
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>std_msgs</depend>
  <depend>rclcpp</depend>


  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
